--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <button id="boton">Buscar</button>
         </section>
         <section id="posters" class="posters">
-            
+            <div class="video" id="video">
+                <iframe id="youtube" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" allowfullscreen></iframe>
+            </div>
         </section>
     </body>
     <script src="api/main.js" type="module"></script>
